--- a/social-front/public/css/styles.css
+++ b/social-front/public/css/styles.css
@@ -1576,7 +1576,7 @@ textarea.form-control {
   z-index: -1;
   width: 100%;
   height: 100%;
-  background-image: url("../images/pattern.webp");
+  background-image: url("../images/cc.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -4492,7 +4492,7 @@ textarea.form-control {
   top: 0px;
   left: 0px;
   z-index: -1;
-  opacity: 0.08;
+  opacity: 1.08;
 }
 
 .mc-auth-group {
@@ -6347,7 +6347,7 @@ textarea.form-control {
   z-index: -1;
   width: 100%;
   height: 100%;
-  background-image: url("../images/pattern.webp");
+  background-image: url("../images/cc.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
